# DBus_Application

./: .gitignore  CMakeLists.txt  DBus_Qt_Clock_Presentation.pptx
digital_clock/: CMakeLists.txt  digital_clock.cpp  digital_clock.h  main.cpp
timezone_selector/: CMakeLists.txt  main.cpp  timezone_selector.cpp  timezone_selector.h
